--- a/.github/workflows/1-create-ruleset.yaml
+++ b/.github/workflows/1-create-ruleset.yaml
@@ -22,29 +22,27 @@ env:
   TEMPLATES_REPOSITORY: "lufomatics/reusables"
 
 jobs:
+  find-workshop-issue:
+    name: Find the Workshop Issue
+    uses: lufomatics/reusables/.github/workflows/find-workshop-issue.yaml@v0.1.0
+    with:
+      issue-title-text: 'Workshop'  # Adjust if your workshop issue has a different title text
+      
   check-work:
     name: Check Step Work
-    runs-on: ubuntu-latest
     if: |
-      !github.event.repository.is_template &&
-      inputs.ruleset-created
+      !github.event.repository.is_template
 
+    runs-on: ubuntu-latest
+    needs: [find-workshop-issue]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Gather Workshop Issue
-        id: gather-issue
-        run: |
-          ISSUE_ID=$(gh issue list --state open --json number --jq '.[0].number')
-          echo "issue_number=$ISSUE_ID" >> $GITHUB_OUTPUT
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Notify Step 1
         run: |
-          gh issue comment ${{ steps.gather-issue.outputs.issue_number }} \
+          gh issue comment ${{ needs.find-workshop-issue.outputs.issue-url }} \
             --body "Vamos criar uma Branch Protection Rule e outras configurações. Assim que concluir, partiremos para abrir um Pull Request!"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -52,19 +50,11 @@ jobs:
   post-next-step-content:
     name: Post Next Step
     runs-on: ubuntu-latest
-    needs: [check-work]
+    needs: [check-work, find-workshop-issue]
     if: |
       !github.event.repository.is_template
 
     steps:
-      - name: Gather Workshop Issue
-        id: gather-issue
-        run: |
-          ISSUE_ID=$(gh issue list --state open --json number --jq '.[0].number')
-          echo "issue_number=$ISSUE_ID" >> $GITHUB_OUTPUT
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -77,7 +67,7 @@ jobs:
 
       - name: Comment - Step 2 instructions
         run: |
-          gh issue comment ${{ steps.gather-issue.outputs.issue_number }} \
+          gh issue comment ${{ needs.find-workshop-issue.outputs.issue-url }} \
             --body-file ${{ env.STEP_2_FILE }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
